Fix deprecated Thread.getId() -> threadId()